<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:gravity="top">

    <LinearLayout
        android:id="@id/set_account_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/title_function_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/manage_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/manage_account"
            android:inputType="none"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#fff"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/manage_income_and_expenses"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/set_income_and_expenses"
            android:inputType="none"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#fff"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/statistics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/statistics"
            android:inputType="none"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#fff"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/about_author"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/about_author"
            android:inputType="none"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#fff"
            android:textSize="@dimen/font_size" />

    </LinearLayout>
</RelativeLayout>
